--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas
-numpy
-mplsoccer
-streamlit
-openpyxl
-streamlit_option_menu
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+bcrypt==4.0.1
+pandas==2.0.3
+numpy==1.24.3
+streamlit==1.27.0
+streamlit-option-menu==0.3.6
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.96.0
+mplsoccer==1.0.1
