--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools==68.0.0
 bcrypt==4.0.1
 pandas==2.0.3
 numpy==1.24.3
@@ -8,3 +9,4 @@ google-auth-oauthlib==1.0.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.96.0
 mplsoccer==1.0.1
+openpyxl==3.1.2
