--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Dependencies for Paris FC Streamlit App
-# Compatible with Python 3.10/3.11 (recommended) and 3.12 (with adjustments)
+# Compatible with Python 3.10/3.11
 
 # Core dependencies
 streamlit==1.27.0
@@ -14,7 +14,7 @@ google-auth-httplib2==0.1.0
 google-api-python-client==2.96.0
 
 # Visualization (mplsoccer and dependencies)
-mplsoccer==1.0.1
+mplsoccer==1.1.0
 matplotlib==3.7.2
 scipy==1.10.1
 pillow==9.5.0
@@ -22,10 +22,6 @@ pillow==9.5.0
 # UI Components
 streamlit-option-menu==0.3.6
 
-# Required for build processes (especially for Python 3.12)
+# Required for build processes
 setuptools==68.0.0
 wheel==0.41.2
-distutils
-
-# Optional: For password hashing (if you reinstate bcrypt later)
-# bcrypt==4.0.1
