--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Dependencies for Paris FC Streamlit App
-# Compatible with Python 3.10/3.11
+# Compatible with Python 3.12
 
-# Core dependencies
+# Core dependencies (versions récentes sans dépendance à distutils)
 streamlit==1.27.0
-pandas==2.0.3
-numpy==1.24.3
+pandas==2.1.4  # Version récente compatible avec Python 3.12
+numpy==1.26.0  # Version récente compatible avec Python 3.12
 openpyxl==3.1.2
 
 # Authentication & Google Drive
@@ -13,15 +13,15 @@ google-auth-oauthlib==1.0.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.96.0
 
-# Visualization (mplsoccer and dependencies)
-mplsoccer==1.1.0
-matplotlib==3.7.2
-scipy==1.10.1
-pillow==9.5.0
+# Visualization (mplsoccer et dépendances)
+mplsoccer==1.1.0  # Version plus récente et compatible
+matplotlib==3.8.0
+scipy==1.11.4
+pillow==10.1.0
 
 # UI Components
 streamlit-option-menu==0.3.6
 
-# Required for build processes
+# Build tools (pas besoin de distutils avec ces versions)
 setuptools==68.0.0
 wheel==0.41.2
