--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@
 
 # Core dependencies (versions récentes sans dépendance à distutils)
 streamlit==1.27.0
-pandas==2.1.4  # Version récente compatible avec Python 3.12
-numpy==1.26.0  # Version récente compatible avec Python 3.12
+pandas==2.1.4
+numpy==1.26.0
 openpyxl==3.1.2
 
 # Authentication & Google Drive
@@ -14,10 +14,10 @@ google-auth-httplib2==0.1.0
 google-api-python-client==2.96.0
 
 # Visualization (mplsoccer et dépendances)
-mplsoccer==1.1.0  # Version plus récente et compatible
+mplsoccer==1.1.0
 matplotlib==3.8.0
 scipy==1.11.4
-pillow==10.1.0
+pillow==9.5.0  # Version compatible avec streamlit==1.27.0
 
 # UI Components
 streamlit-option-menu==0.3.6
