--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-# Dependencies for Paris FC Streamlit App
-# Compatible with Python 3.11
-
-# Core dependencies (versions récentes sans dépendance à distutils)
-streamlit==1.27.0
-pandas==2.1.4
-numpy==1.26.0
-openpyxl==3.1.2
-
-# Authentication & Google Drive
-google-auth==2.22.0
-google-auth-oauthlib==1.0.0
-google-auth-httplib2==0.1.0
-google-api-python-client==2.96.0
-
-# Visualization (mplsoccer et dépendances)
-mplsoccer==1.1.0
-matplotlib==3.8.0
-scipy==1.11.4
-pillow==9.5.0  # Version compatible avec streamlit==1.27.0
-
-# UI Components
-streamlit-option-menu==0.3.6
-
-# Build tools (pas besoin de distutils avec ces versions)
-setuptools==68.0.0
-wheel==0.41.2
+pandas
+numpy
+mplsoccer
+streamlit
+openpyxl
+streamlit_option_menu
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
