--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-pandas==2.0.3
-numpy==1.24.3
-streamlit==1.28.0
-streamlit-option-menu==0.3.6
-mplsoccer==1.0.0
-matplotlib==3.7.2
-google-api-python-client==2.95.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-unidecode==1.3.6
-openpyxl==3.1.2
-Pillow==9.5.0
-scipy==1.10.1
+pandas
+numpy
+mplsoccer
+streamlit
+openpyxl
+streamlit_option_menu
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
