--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-pandas==2.0.3
-numpy==1.24.3
-streamlit==1.28.0
-streamlit-option-menu==0.3.6
-matplotlib==3.7.2
-mplsoccer==1.6.0
-Pillow==9.5.0
-google-api-python-client==2.95.0
-google-auth==2.22.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-openpyxl==3.1.2
-unidecode==1.3.6
-scipy==1.10.1
+pandas>=2.0.0
+numpy>=1.24.0
+streamlit>=1.25.0
+streamlit-option-menu>=0.3.6
+google-api-python-client>=2.100.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
+mplsoccer>=1.0.0
+matplotlib>=3.7.0
+openpyxl>=3.1.0
